add beginings of species distribution atlas

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ BioticDistribution/Combine_RelevePluriSp_MPO/Data/
 BioticDistribution/ZIF-Fisheries-2010-2015/Data/
 BioticDistribution/BIOMOD/Data/
 BioticDistribution/GLM/Data/
+LabNotes.md
+LabNotes.pdf
+BioticAtlas/Code/01-SpeciesAtlas.pdf
