Add random forest analyses

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ LabNotes.md
 LabNotes.pdf
 BioticAtlas/Code/01-SpeciesAtlas.pdf
 BioticData/SpeciesOccurrence/Data
+BioticDistribution/RandomForest/Data
